src/css/styles.css
/*
===============================
------> BASIC CSS RESET <------
===============================
*/

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

/*
=============================
------> CUSTOM STYLES <------
=============================
*/

body {
    background-color: #242424;
    font-family: 'Roboto', Helvetica, sans-serif;
    color: rgb(32, 32, 32);
    overflow-x: hidden;
}

h1 {
    margin: 0;
}

ul, li {
    list-style-type: none;
}

/*
=============================
----------> INPUTS <---------
=============================
*/

input::-webkit-input-placeholder,
input:-ms-input-placeholder {
    text-overflow: ellipsis;
    font-size: 14px;
    font-weight: 400;
    color: rgb(32, 32, 32);
    line-height: 1.7;
    text-align: left;
    text-rendering: optimizeLegibility;
    text-indent: 0px;
    -webkit-transition: text-indent 0.3s ease;
    -o-transition: text-indent 0.3s ease;
    transition: text-indent 0.3s ease;
}

input::placeholder,
input::-webkit-input-placeholder,
input:-ms-input-placeholder {
    text-overflow: ellipsis;
    font-size: 14px;
    font-weight: 400;
    color: rgb(32, 32, 32);
    line-height: 1.7;
    text-align: left;
    text-rendering: optimizeLegibility;
    text-indent: 0px;
    -webkit-transition: text-indent 0.3s ease;
    -o-transition: text-indent 0.3s ease;
    transition: text-indent 0.3s ease;
}

input:focus::-webkit-input-placeholder,
input:focus:-ms-input-placeholder,
input:focus::-moz-placeholder,
input:focus:-moz-placeholder {
    color: transparent;
    text-indent: 500px;
    -webkit-transition: text-indent 0.3s ease;
    -o-transition: text-indent 0.3s ease;
    transition: text-indent 0.3s ease;
}

input:focus::placeholder,
input:focus::-webkit-input-placeholder,
input:focus:-ms-input-placeholder,
input:focus::-moz-placeholder,
input:focus:-moz-placeholder {
    color: transparent;
    text-indent: 500px;
    -webkit-transition: text-indent 0.3s ease;
    -o-transition: text-indent 0.3s ease;
    transition: text-indent 0.3s ease;
}

/*
=============================
-------> BACKGROUND <--------
=============================
*/
.container__background {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: -1;
}

.background__shape {
    position: fixed;
    top: -122px;
    -webkit-animation: grow 10s alternate infinite;
            animation: grow 10s alternate infinite;
}

.background__lines--top {
    display: none;
    position: absolute;
    top: 0;
    left: 220px;
    z-index: -1;
    -webkit-animation: grow 10s alternate infinite;
            animation: grow 10s alternate infinite;
}

.background__lines--bottom {
    position: fixed;
    top: 65%;
    right: -10%;
    -webkit-animation: grow 10s alternate infinite;
            animation: grow 10s alternate infinite;
}

@-webkit-keyframes grow {
    0% {
        -webkit-transform: scale(1);
                transform: scale(1);
    }
    100% {
        -webkit-transform: scale(1.1);
                transform: scale(1.1);
    }
}

@keyframes grow {
    0% {
        -webkit-transform: scale(1);
                transform: scale(1);
    }
    100% {
        -webkit-transform: scale(1.1);
                transform: scale(1.1);
    }
}

@media screen and (min-width: 1025px) {
    /* big landscape tablets, laptops, and desktops */
    .background__shape {
        top: -22px;
    }
    .background__lines--top {
        display: block;
    }
}

/*
=============================
-------> CONTENT <--------
=============================
*/

.container__maincontent {
    height: 100vh;
    margin: 10% 0;
    padding: 48px 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.container__wrapper {
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

/*
=============================
------> MAIN STYLES <------
=============================
*/

/* ------> HEADER <------ */
.header__container {
    width: 290px;
    padding: 48px 0 12px 20px;
    text-align: left;
}

.header__heading {
    font-size: 36px;
    font-weight: 300;
    color: #ffffff;
    line-height: 1.2;

}

@media screen and (min-width: 801px) {
    /* tablet, landscape iPad, lo-res laptops ands desktops */
    .header__container {
        width: 470px;
        margin-top: -12px;
        padding-bottom: 12px;
        text-align: left;
        padding-left: 60px;
    }

    .header__heading {
        font-size: 48px;
        padding-left: 20px;
    }
}

@media screen and (min-width: 1025px) {
    /* big landscape tablets, laptops, and desktops */
    .header__container {
        width: 470px;
        margin-top: -42px;
        padding-bottom: 32px;
        margin-left: 308px;
    }

    .header__heading {
        font-size: 48px;
    }
}

/* ------> MAIN CONTENT <------ */
.main__container--animation {
    display: none;
}

.main__wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

/* ------> ASIDE IMG BOX <------ */

.main__img-box {
    display: none;
}
/* ... */

